# skiffy-messenger

./: ._pre-commit-config.yaml  .env  .env.development  .env.production  .env.staging  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  analysis_options.yaml  build.yaml  flutter_rust_bridge.yaml  l10n.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.claude/commands/: test-integration.sh
.docs/: architecture.md
.docs/architecture/: authentication.md  folder-structure.md  security-model.md  source-tree.md  state-management.md  tech-stack.md  testing-strategy.md
.docs/llms/: react-compiler.md  tauri.md
.docs/stories/: 1.3.story.md
.github/workflows/: main.yaml
android/app/: build.gradle.kts
apps/v2/: .gitignore  README.md  app.json  eslint.config.js  jest.setup.js  metro.config.js  package.json  tsconfig.json
assets/fonts/: README.md
docs/: SECURITY_AUDIT.md  architecture.md  ffi-api-specification.md  implementation-roadmap.md  prd.md  theme-migration.md  ui-architecture.md  ui-specification.md
docs/architecture/: api-design.md  coding-standards.md  project-structure.md  rust-backend-architecture.md  tech-stack.md  testing-strategy.md
docs/epics/: epic-1-foundation.md  epic-10-user-settings.md  epic-2-authentication.md  epic-3-messaging.md  epic-4-synchronization.md  epic-5-offline-performance.md  epic-6-advanced-messaging.md  epic-7-notifications.md  epic-8-voice-calls.md  epic-9-video-calls.md
docs/llms/: react-compiler.md
docs/lovable-prompts/: README.md  master-context-prompt.md  mention-input-prompt.md  message-search-prompt.md  notification-banner-prompt.md  notification-preferences-prompt.md  pinned-messages-management-prompt.md  (+3 more)
integration_test/: simple_test.dart
lib/: bootstrap.dart
rust/: Cargo.toml  pubspec.yaml
rust/macos/Runner.xcodeproj/: project.pbxproj
rust/macos/Runner/Configs/: AppInfo.xcconfig
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: auth.rs  mod.rs  secure_storage.rs
rust/src/core/: mod.rs
rust/src/core/matrix_client/: integration_tests.rs  mod.rs  structs.rs  unit_tests.rs
rust/src/core/storage/: factory.rs  keychain.rs  keys.rs  linux.rs  memory.rs  mod.rs  tests.rs  windows.rs
rust/src/matrix_client/: integration_tests.rs  mod.rs  structs.rs  unit_tests.rs
rust_builder/: pubspec.yaml
scripts/: check_colors.dart  run_checks.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+679 files in other folders)
