[package]
name = "rust_lib_skiffy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
flutter_rust_bridge = "=2.11.1"
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.21"
enr = { version = "0.7", features = ["serde", "rust-secp256k1"] }
hex = "0.4"
multiaddr = "0.17"
once_cell = "1.15"
rand = "0.8"
secp256k1 = { version = "0.26", features = ["rand", "recovery", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sscanf = "0.4"
smart-default = "0.6"
url = "2.3"
libc = "0.2"
serde-aux = "4.3.1"
rln = "0.8.0"
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
matrix-sdk = "0.14.0"

[dev-dependencies]
futures = "0.3.25"
serial_test = "1.0.0"
tokio = { version = "1.24.2", features = ["macros", "rt", "sync", "time"] }

