[package]
name = "rust_lib_skiffy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
flutter_rust_bridge = "=2.11.1"
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.21"
enr = { version = "0.7", features = ["serde", "rust-secp256k1"] }
hex = "0.4"
multiaddr = "0.17"
once_cell = "1.15"
rand = "0.8"
secp256k1 = { version = "0.26", features = ["rand", "recovery", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sscanf = "0.4"
smart-default = "0.6"
url = "2.3"
libc = "0.2"
serde-aux = "4.3.1"
rln = "0.8.0"
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
matrix-sdk = "0.14.0"
rusqlite = { version = "0.37", features = ["bundled"] }
anyhow = "1.0.99"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }

# Platform-specific secure storage
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = "2.9"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = "2.0"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "2.0"

[dev-dependencies]
futures = "0.3.25"
serial_test = "1.0.0"
tokio = { version = "1.24.2", features = ["macros", "rt", "sync", "time"] }
mockito = "1.0"
